<resources>
    <string name="cancel">Cancel</string>
    <string name="copy">Copy</string>
    <string name="copyUrl">Copy URL</string>
    <string name="cut">Cut</string>
    <string name="defaultVoiceMailAlphaTag">Voicemail</string>
    <string name="defaultMsisdnAlphaTag">MSISDN1</string>
    <string name="emptyPhoneNumber">(No phone number)</string>
    <string name="httpErrorBadUrl">"Couldn't open the page because the URL is invalid."</string>
    <string name="httpErrorUnsupportedScheme">"The protocol isn't supported."</string>
    <string name="no">Cancel</string>
    <string name="ok">OK</string>
    <string name="paste">Paste</string>
    <string name="search_go">Search</string>
    <string name="selectAll">Select all</string>
    <string name="unknownName">Unknown</string>
    <string name="untitled">&lt;Untitled></string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_unknown">"Can't play this video."</string>
    <string name="VideoView_error_title">Video problem</string>
    <string name="yes">OK</string>
    <string name="dialog_alert_title">Attention</string>
    <string name="VideoView_error_text_invalid_progressive_playback">"This video isn't valid for streaming to this device."</string>
    <string name="selectTextMode">Select text</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="fingerprint_icon_content_description">Fingerprint icon</string>
    <string name="status_bar_rotate">rotate</string>
    <string name="status_bar_headset">headset</string>
    <string name="status_bar_data_saver">data_saver</string>
    <string name="status_bar_managed_profile">managed_profile</string>
    <string name="status_bar_ime">ime</string>
    <string name="status_bar_sync_failing">sync_failing</string>
    <string name="status_bar_sync_active">sync_active</string>
    <string name="status_bar_cast">cast</string>
    <string name="status_bar_hotspot">hotspot</string>
    <string name="status_bar_location">location</string>
    <string name="status_bar_bluetooth">bluetooth</string>
    <string name="status_bar_nfc">nfc</string>
    <string name="status_bar_tty">tty</string>
    <string name="status_bar_speakerphone">speakerphone</string>
    <string name="status_bar_zen">zen</string>
    <string name="status_bar_mute">mute</string>
    <string name="status_bar_volume">volume</string>
    <string name="status_bar_wifi">wifi</string>
    <string name="status_bar_cdma_eri">cdma_eri</string>
    <string name="status_bar_data_connection">data_connection</string>
    <string name="status_bar_phone_evdo_signal">phone_evdo_signal</string>
    <string name="status_bar_phone_signal">phone_signal</string>
    <string name="status_bar_battery">battery</string>
    <string name="status_bar_alarm_clock">alarm_clock</string>
    <string name="status_bar_secure">secure</string>
    <string name="status_bar_clock">clock</string>
    <string name="config_ethernet_iface_regex">eth\\d</string>
    <string name="config_mobile_hotspot_provision_app_no_ui" />
    <string name="config_mobile_hotspot_provision_response" />
    <string name="config_wifi_tether_enable">com.android.settings/.TetherService</string>
    <string name="config_wifi_p2p_device_type">10-0050F204-5</string>
    <string name="config_wifi_random_mac_oui">DA-A1-19</string>
    <string name="config_wifi_framework_sap_2G_channel_list">1,6,11</string>
    <string name="widget_default_package_name" />
    <string name="widget_default_class_name" />
    <string name="config_iccHotswapPromptForRestartDialogComponent">@null</string>
    <string name="default_wallpaper_component">@null</string>
    <string name="image_wallpaper_component">com.android.systemui/com.android.systemui.ImageWallpaper</string>
    <string name="config_networkLocationProviderPackageName">com.qualcomm.location</string>
    <string name="config_fusedLocationProviderPackageName">com.qualcomm.location</string>
    <string name="config_hardwareFlpPackageName">com.android.location.fused</string>
    <string name="config_geocoderProviderPackageName">com.amap.android.location</string>
    <string name="config_geocoderProviderPackageName_amap">com.amap.android.location</string>
    <string name="config_geocoderProviderPackageName_google">com.google.android.gms</string>
    <string name="config_geofenceProviderPackageName">@null</string>
    <string name="config_activityRecognitionHardwarePackageName">@null</string>
    <string name="config_comboNetworkLocationProvider">com.qualcomm.location</string>
    <string name="config_datause_iface">rmnet0</string>
    <string name="default_sms_application">com.android.messaging</string>
    <string name="default_browser">com.le.browser</string>
    <string name="config_default_dns_server">8.8.8.8</string>
    <string name="mobile_provisioning_apn" />
    <string name="mobile_provisioning_url" />
    <string name="gsm_alphabet_default_charset" />
    <string name="db_default_journal_mode">PERSIST</string>
    <string name="db_default_sync_mode">FULL</string>
    <string name="db_wal_sync_mode">FULL</string>
    <string name="config_useragentprofile_url" />
    <string name="config_mms_user_agent">Android-Mms/2.0</string>
    <string name="config_mms_user_agent_profile_url">http://www.google.com/oha/rdf/ua-profile-kila.xml</string>
    <string name="config_isoImagePath" />
    <string name="config_ntpServer">asia.pool.ntp.org</string>
    <string name="config_wimaxServiceJarLocation" />
    <string name="config_wimaxNativeLibLocation" />
    <string name="config_wimaxManagerClassname" />
    <string name="config_wimaxServiceClassname" />
    <string name="config_wimaxStateTrackerClassname" />
    <string name="config_dreamsDefaultComponent">com.google.android.deskclock/com.android.deskclock.Screensaver</string>
    <string name="config_dozeComponent">com.android.systemui/com.android.systemui.doze.DozeService</string>
    <string name="config_dozeDoubleTapSensorType" />
    <string name="config_ethernet_tcp_buffers">524288,1048576,3145728,524288,1048576,2097152</string>
    <string name="config_wifi_tcp_buffers">524288,1048576,2097152,262144,524288,1048576</string>
    <string name="config_chooseAccountActivity">android/android.accounts.ChooseAccountActivity</string>
    <string name="config_chooseTypeAndAccountActivity">android/android.accounts.ChooseTypeAndAccountActivity</string>
    <string name="config_customResolverActivity">com.journeyui.chooser/.ResolverActivity</string>
    <string name="config_customAdbPublicKeyConfirmationComponent">com.android.systemui/com.android.systemui.usb.UsbDebuggingActivity</string>
    <string name="config_customAdbPublicKeyConfirmationSecondaryUserComponent">com.android.systemui/com.android.systemui.usb.UsbDebuggingSecondaryUserActivity</string>
    <string name="config_customVpnConfirmDialogComponent">com.android.vpndialogs/com.android.vpndialogs.ConfirmDialog</string>
    <string name="config_appsAuthorizedForSharedAccounts">;com.android.settings;</string>
    <string name="config_defaultNetworkScorerPackageName" />
    <string name="config_persistentDataPackageName">com.google.android.gms</string>
    <string name="prohibit_manual_network_selection_in_gobal_mode">false</string>
    <string name="config_keyguardComponent">com.android.systemui/com.android.systemui.keyguard.KeyguardService</string>
    <string name="config_forceVoiceInteractionServicePackage" />
    <string name="config_radio_access_family" />
    <string name="config_cameraLaunchGestureSensorStringType" />
    <string name="config_networkPolicyNotificationComponent" />
    <string name="config_packagedKeyboardName" />
    <string name="config_defaultPictureInPictureBounds">0 0 100 100</string>
    <string name="config_appsNotReportingCrashes" />
    <string name="config_wallpaperCropperPackage">com.android.wallpaperpicker</string>
    <string name="config_doubleTouchGestureEnableFile" />
    <string name="config_tvRemoteServicePackage" />
    <string name="config_rat_unknown" />
    <string name="config_rat_2g">2G</string>
    <string name="config_rat_3g">3G</string>
    <string name="config_rat_4g">4G</string>
    <string name="operator_config_url" />
    <string name="operator_ping_url" />
    <string name="power_key_emergency_number">112</string>
    <string name="config_demoModeLauncherComponent">com.android.retaildemo/.DemoPlayer</string>
    <string name="config_emergency_call_number">112</string>
    <string name="config_deviceProvisioningPackage" />
    <string name="config_defaultDndAccessPackages">com.android.camera2</string>
    <string name="locale_codes" />
    <string name="def_wifi_wifihotspot_pass" />
    <string name="def_wifi_direct_name" />
    <string name="def_custom_bt_defname" />
    <string name="month_day_year" formatted="false">%B %-e, %Y</string>
    <string name="time_of_day" formatted="false">%-l:%M:%S %p</string>
    <string name="date_and_time" formatted="false">%b %-e, %Y, %-l:%M:%S %p</string>
    <string name="date_time">%1$s, %2$s</string>
    <string name="common_name_prefixes" />
    <string name="common_name_suffixes" />
    <string name="common_last_name_prefixes" />
    <string name="common_name_conjunctions" />
    <string name="lock_pattern_view_aspect">square</string>
    <string name="icu_abbrev_wday_month_day_no_year">eeeMMMMd</string>
    <string name="candidates_style"><u>candidates</u></string>
    <string name="font_family_display_4_material">sans-serif-light</string>
    <string name="font_family_display_3_material">sans-serif</string>
    <string name="font_family_display_2_material">sans-serif</string>
    <string name="font_family_display_1_material">sans-serif</string>
    <string name="font_family_headline_material">sans-serif</string>
    <string name="font_family_title_material">sans-serif-medium</string>
    <string name="font_family_subhead_material">sans-serif</string>
    <string name="font_family_menu_material">sans-serif</string>
    <string name="font_family_body_2_material">sans-serif-medium</string>
    <string name="font_family_body_1_material">sans-serif</string>
    <string name="font_family_caption_material">sans-serif</string>
    <string name="font_family_button_material">sans-serif-medium</string>
    <string name="byteShort">B</string>
    <string name="kilobyteShort">KB</string>
    <string name="megabyteShort">MB</string>
    <string name="gigabyteShort">GB</string>
    <string name="terabyteShort">TB</string>
    <string name="petabyteShort">PB</string>
    <string name="fileSizeSuffix">%1$s %2$s</string>
    <string name="durationDays">%1$d days</string>
    <string name="durationDayHours">%1$d day %2$d hrs</string>
    <string name="durationDayHour">%1$d day %2$d hr</string>
    <string name="durationHours">%1$d hrs</string>
    <string name="durationHourMinutes">%1$d hr %2$d mins</string>
    <string name="durationHourMinute">%1$d hr %2$d min</string>
    <string name="durationMinutes">%1$d mins</string>
    <string name="durationMinute">%1$d min</string>
    <string name="durationMinuteSeconds">%1$d min %2$d secs</string>
    <string name="durationMinuteSecond">%1$d min %2$d sec</string>
    <string name="durationSeconds">%1$d secs</string>
    <string name="durationSecond">%1$d sec</string>
    <string name="mmiError">Connection problem or invalid MMI code.</string>
    <string name="mmiFdnError">Operation is restricted to fixed dialing numbers only.</string>
    <string name="aerr_restart">Open app again</string>
    <string name="aerr_report">Send feedback</string>
    <string name="aerr_mute">Mute until device restarts</string>
    <string name="aerr_close_app">Close app</string>
    <string name="screen_compat_mode_scale">Scale</string>
    <string name="screen_compat_mode_show">Always show</string>
    <string name="screen_compat_mode_hint">Re-enable this in System settings > Apps > Downloaded.</string>
</resources>