<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingTop="@dimen/aerr_padding_list_top" android:paddingBottom="@dimen/aerr_padding_list_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:id="@id/aerr_restart" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/aerr_restart" android:drawableStart="@drawable/zs_svg_sendagain" style="@style/aerr_list_item" />
    <Button android:id="@id/aerr_close" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/aerr_close_app" android:drawableStart="@drawable/zs_svg_remove" style="@style/aerr_list_item" />
    <Button android:id="@id/aerr_report" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/aerr_report" android:drawableStart="@drawable/zs_svg_message_border" style="@style/aerr_list_item" />
    <Button android:id="@id/aerr_mute" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/aerr_mute" android:drawableStart="@drawable/zs_svg_shield_border" style="@style/aerr_list_item" />
</LinearLayout>