<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="56.0dip" android:layout_marginTop="12.0dip" android:baselineAligned="true">
        <TextView android:textSize="16.0sp" android:textColor="#de000000" android:layout_gravity="center_vertical" android:layout_width="235.0dip" android:layout_height="wrap_content" android:text="@string/screen_compat_mode_scale" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:fontFamily="zs-noto-regular" />
        <com.zeusis.widget.switchbutton.ZeusisSwitchButton android:id="@id/compat_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="48.0dip" android:baselineAligned="true">
        <com.zeusis.widget.checkbox.ZeusisCheckbox android:id="@id/ask_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_alignParentStart="true" />
        <TextView android:textSize="14.0sp" android:textColor="#8a000000" android:layout_gravity="center_vertical" android:layout_width="223.0dip" android:layout_height="wrap_content" android:layout_marginLeft="22.0dip" android:text="@string/screen_compat_mode_show" android:layout_toRightOf="@id/ask_checkbox" android:layout_centerVertical="true" android:fontFamily="zs-noto-regular" />
    </RelativeLayout>
    <TextView android:textAppearance="?textAppearanceSmall" android:gravity="center" android:id="@id/reask_hint" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/screen_compat_mode_hint" android:fontFamily="zs-noto-regular" />
</LinearLayout>